test/good/04_runtime_to_erased.er
let 0 Nat : U = (0 A : U) -> A -> (A -> A) -> A;
let zero : Nat = \A z s. z;
let succ : Nat -> Nat = \n A z s. s (n A z s);

let ok : ((0 n : Nat) -> Nat) -> (n : Nat) -> Nat = \f n. f n;
ok
