test/bad/01_direct_escape.er
let 0 Nat : U = (0 A : U) -> A -> (A -> A) -> A;
let zero : Nat = \A z s. z;
let succ : Nat -> Nat = \n A z s. s (n A z s);

let bad : (0 n : Nat) -> Nat = \n. n;
bad
